// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadFiles success should build the schema even with files with separate queries 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@skip",
    "@include",
    "@deprecated",
  ],
  "_implementations": Object {},
  "_mutationType": null,
  "_possibleTypeMap": Object {},
  "_queryType": "Query",
  "_subscriptionType": null,
  "_typeMap": Object {
    "Boolean": "Boolean",
    "Int": "Int",
    "Query": "Query",
    "String": "String",
    "User": "User",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
  },
  "astNode": Object {
    "directives": Array [],
    "kind": "SchemaDefinition",
    "loc": Object {
      "end": 23,
      "start": 0,
    },
    "operationTypes": Array [
      Object {
        "kind": "OperationTypeDefinition",
        "loc": Object {
          "end": 21,
          "start": 9,
        },
        "operation": "query",
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 21,
            "start": 16,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 16,
            },
            "value": "Query",
          },
        },
      },
    ],
  },
  "extensionASTNodes": undefined,
  "extensions": undefined,
}
`;

exports[`loadFiles success should valid schema with many file 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@skip",
    "@include",
    "@deprecated",
  ],
  "_implementations": Object {},
  "_mutationType": null,
  "_possibleTypeMap": Object {},
  "_queryType": "Query",
  "_subscriptionType": null,
  "_typeMap": Object {
    "Boolean": "Boolean",
    "Float": "Float",
    "ID": "ID",
    "Int": "Int",
    "Product": "Product",
    "Query": "Query",
    "String": "String",
    "User": "User",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
  },
  "astNode": Object {
    "directives": Array [],
    "kind": "SchemaDefinition",
    "loc": Object {
      "end": 23,
      "start": 0,
    },
    "operationTypes": Array [
      Object {
        "kind": "OperationTypeDefinition",
        "loc": Object {
          "end": 21,
          "start": 9,
        },
        "operation": "query",
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 21,
            "start": 16,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 16,
            },
            "value": "Query",
          },
        },
      },
    ],
  },
  "extensionASTNodes": undefined,
  "extensions": undefined,
}
`;
